--- a/www/index.html
+++ b/www/index.html
@@ -23,13 +23,8 @@
         <img src="img/logosf.png" style="width:100%; height:25%">
         <div class="row text-center mt-3">
           <div class="col-12 mb-2" id="login">
-            <button class="btn btn-verde w-100" onclick="app.login();">
+            <button class="btn btn-verde w-100" onclick="gotologin();">
               <strong>Iniciar Sesión</strong>
-            </button>
-          </div>
-          <div class="col-12">
-            <button class="btn btn-verde w-100" onclick="app.registrar();">
-              <strong>Registrar</strong>
             </button>
           </div>
         </div>
