--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </header>
-    <div class="container-fluid p-0 mt-2 w-100" id="home" style="min-height:100%; display:table">
+    <div class="container-fluid p-0 mt-2 w-100" id="home" style="min-height:100%; display:table;">
         <div id="modulos" class="px-2 pt-5 w-100" style="display: table-cell; vertical-align: middle;">
             <div class="row m-0 mb-2">
                 <div class="col-6 modulo4 mr-1 text-center pt-4" onclick="buildNewDoc()">
