--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <meta charset="ISO-8859-1">
-    <meta name="format-detection" content="telephone=no">
+    <!--<meta name="format-detection" content="telephone=no">-->
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
