--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -18,12 +18,12 @@
 </head>
 
 <body id="body" onload="Loaded()">
-    <button class=" ml-2 mt-2 btn btn-azul" onclick="backbutton()" id="access">
+    <button class=" ml-2 mt-2 btn btn-verde" onclick="backbutton()" id="access">
         <i class="fa fa-chevron-left p-1" aria-hidden="true"></i>
     </button>
     <div class="container pt-3" id="login">
         <div class="">
-            <img class="mt-3 mb-4 img-center w-100" src="../img/logosf.png">
+            <img class="mt-3 mb-4 img-center w-100" src="../img/logovertical.png">
 
             <div id="errorlog" style="display:none">
                 <p class="txt-rojo text-center">Usuario o Contraseña incorrecto</p>
@@ -40,7 +40,7 @@
             <button id="acceder" class="btn btn-verde" onclick="login()" style="width: 100%;" disabled="true">Acceder</button>
             <div class="divider"></div>
             <label class="form-check-label">
-                <a href="#" onclick="gotoreset()"> Recuperar contraseña</a>
+                <a href="#" onclick="gotoreset()"></a>
             </label>
         </div>
     </div>
