--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
   <div class="container h-100">
     <div class="container d-flex align-items-center h-100">
       <div class="row justify-content-center">
-        <img src="img/logosf.png" style="width:100%; height:25%">
+        <img src="img/logovertical.png" style="width:100%; height:25%">
         <div class="row text-center mt-3">
           <div class="col-12 mb-2" id="login">
             <button class="btn btn-verde w-100" onclick="gotologin();">
